--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -1,14 +1,11 @@
-.box {
-    display: grid;
-    
-   
-  }
 
-  .box :first-child {
-    align-self: center;
-}
   
-
+.nav_compte_panier
+{
+    display: flex;
+    position: absolute;
+    right: 5%;
+}
 
 
     
