--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -1,5 +1,6 @@
 
-  
+
+/* Navbar */
 .nav_compte_panier
 {
     display: flex;
@@ -7,6 +8,7 @@
     right: 5%;
 }
 
+/* Responsabilités */
 .box
 {
     padding: 0;    
@@ -14,11 +16,28 @@
 .icon_box
 {
     display: flex;
-    border: 1px solid #ddd;
-    padding: 30px;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
     margin-bottom: 0;
+    justify-content: space-evenly;
+    padding: 20px;
+
+   
+   
 }
 
+.icon>i{
+    position:relative;
+    top: calc(50% - 18px); 
+}
+
+
+
+#icon_box_livraison
+{
+    border-left: 1px solid #ddd;
+}
 
 
     
