--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -1,4 +1,6 @@
-
+body{
+    background-color: #f9f9f9;
+}
 
 /* Navbar */
 
@@ -32,6 +34,7 @@
     margin-bottom: 0;
     justify-content: space-evenly;
     padding: 20px;
+    background-color: white;
 
    
    
@@ -53,7 +56,7 @@
 
 
 .popover{
-    min-width: 400px;
+    min-width: 350px;
     position: fixed;
 }
 
@@ -62,9 +65,12 @@ ul {
     padding-left: 0;
     }
 
+.pop_panier_produit{
+    display: flex;
+    
+}
 
-    hr.solid {
-        border-top: 1px solid #bbb;
-      }
-
-
+.pop_panier_description{
+    display: flex;
+    flex-direction: column;
+}
