--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #f9f9f9;
+  
 }
 
 /* Navbar */
@@ -115,4 +116,18 @@ ul {
     line-height: 1.9rem;
     font-size: 1rem;
     font-family: "BodyFont", sans-serif;
+}
+
+
+/*****/
+
+.card{
+    border-radius: 1rem;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px;
+    
+}
+
+.card:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px;
 }
