--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -36,16 +36,21 @@ body{
 #nombre_article{
     background-color: rgb(78, 158, 188);
     border-radius: 52%;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     text-align: center;
-  
+    margin-left: -20px;
+    margin-top: -5px; 
 }
 
 .nombre{
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
+  
+    font-size: 11px;
+    margin-left: -0.5px;
 }
+
 
 
 /* Responsabilités */
