--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -247,6 +247,49 @@ ul {
 
 /**********/
 
-#articles_panier{
+#page_panier{
+    display: flex;
+    margin-top: 10%;
+}
+
+.solid-black {
+    border-top: 1px solid black;
+  }
+  
+
+
+.panier_produit{
+    display:flex;
+}
+
+.paiement_panier{
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px;
+    padding: 32px 24px;
+}
+
+.total{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10%;
+}
+
+.btn_commande{
+    width: 100%;
+}
+
+#img_CB{
+    text-align: center;
+    margin-bottom: 5%;
+   
+}
+
+.valeur_com{
+    display: flex;
+    justify-content: space-between;
+}
+
+.livraison{
+    display: flex;
+    justify-content: space-between;
 }
