--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -371,3 +371,10 @@ ul {
 .container_finalisation{
     display:flex;
 }
+
+
+.info_accordeon{
+    line-height: 1.5;
+    font-size: .8125rem;
+    margin-bottom: 0.1rem;
+}
