--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -378,3 +378,72 @@ ul {
     font-size: .8125rem;
     margin-bottom: 0.1rem;
 }
+
+.accordion-button::after{
+    position: absolute;
+    margin-left: 90%;
+    top: 0;
+    margin-top: 4%;
+    font-family: "Font Awesome 5 Free";
+    content:"\f304";
+    background:none;
+}
+
+.accordion-button:not(.collapsed)::after {
+   
+    
+   display: none;
+}
+
+.accordion-item:last-of-type {
+    margin-bottom: 1rem;
+}
+
+.details_commande{
+    background-color: white;
+    margin-bottom: 1rem;
+    padding: 16px 20px;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 4px;
+}
+
+.detail_paiement{
+    background-color: white;
+    padding: 16px 20px;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 4px;
+}
+
+.details_commande_produits{
+    display:flex;
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.details_commande_description{
+    width: 100px;
+}
+
+.commande_produit{
+    position: relative;
+    display: inline-block;
+    margin: 8px 8px;
+    box-shadow: 2px 2px 4px #bbb;
+    
+    width: 116px;
+    height: 135px;
+    vertical-align: bottom;
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+label{
+    line-height: 1.5;
+    font-size: .8125rem;
+}
+ .form-group{
+     margin-bottom: 1rem;
+ }
