--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -448,3 +448,16 @@ label{
  .form-group{
      margin-bottom: 1rem;
  }
+
+
+
+/********************/
+
+
+.alert{
+    z-index: 999999;
+    position: fixed;
+    margin-top: 82px;
+    width: 100%;
+    border-radius: 0;
+}
