--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -386,17 +386,27 @@ ul {
     margin-top: 4%;
     font-family: "Font Awesome 5 Free";
     content:"\f304";
-    background:none;
+   
 }
 
 .accordion-button:not(.collapsed)::after {
    
-    
    display: none;
 }
 
 .accordion-item:last-of-type {
     margin-bottom: 1rem;
+}
+
+
+button.btn.btn-primary.btn-accordeon-annuler.accordion-button{
+    display: grid;
+    background-color: rgb(78, 158, 188);
+    padding: 6px 9px;
+    color: white;
+    text-align: center;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .details_commande{
@@ -461,3 +471,8 @@ label{
     width: 100%;
     border-radius: 0;
 }
+
+/**********************/
+
+
+  
