--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -472,7 +472,136 @@ label{
     border-radius: 0;
 }
 
-/**********************/
+/********* SIDEBAR ADMIN *************/
 
+.sidebar{
+    background:  rgb(78, 158, 188);
+    position: fixed;
+    height: 100%;
+    padding: 20px 0;
+    transition: all 0.5s ease;
+}
+
+ .sidebar .profile{
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.sidebar .profile img{
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.sidebar .profile h4{
+    color: #ffffff;
+    margin: 10px 0 5px;
+}
+
+.sidebar .profile p{
+    color: rgb(206, 240, 253);
+    font-size: 14px;
+}
+
+ .sidebar ul li a{
+    display: block;
+    padding: 13px 30px;
+    border-bottom: 1px solid white;
+    color: rgb(241, 237, 237);
+    font-size: 16px;
+    position: relative;
+    text-decoration: none;
+}
+
+.sidebar ul li a .icon{
+    color: #dee4ec;
+    width: 30px;
+    display: inline-block;
+}
+
+ .sidebar ul li a:hover,
+ .sidebar ul li a.active{
+    color: black;
+    background:white;
+    border-right: 3px solid black;
+    text-decoration: none;
+}
+
+ .sidebar ul li a:hover .icon,
+ .sidebar ul li a.active .icon{
+    color: #0c7db1;
+}
+
+.sidebar ul li a:hover:before,
+.sidebar ul li a.active:before{
+    display: block;
+}
+
+/*** DASHBOARD ADMIN ****/
+
+.cards-list {
+    z-index: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  .cardAdmin {
+    margin: 30px auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 40px;
+  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+    cursor: pointer;
+    transition: 0.4s;
+  }
+  
+  .cardAdmin .card_image {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+  }
+  
+  .cardAdmin .card_image img {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    object-fit: cover;
+  }
+  
+  .cardAdmin .card_title {
+    text-align: center;
+    border-radius: 0px 0px 40px 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: -80px;
+    height: 40px;
+  }
+  
+  .cardAdmin:hover {
+    transform: scale(0.9, 0.9);
+    box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+      -5px -5px 30px 15px rgba(0,0,0,0.22);
+  }
+  
+  .title-white {
+    color: white;
+  }
+  
+  .title-black {
+    color: black;
+  }
+  
+  @media all and (max-width: 500px) {
+    .card-list {
+      /* On small screens, we are no longer using row direction but column */
+      flex-direction: column;
+    }
+}
+  
 
   
