--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -576,9 +576,8 @@ label{
     text-align: center;
     border-radius: 0px 0px 40px 40px;
     font-family: sans-serif;
-    font-weight: bold;
-    font-size: 30px;
-    margin-top: -80px;
+    margin-top: 5%;
+    font-size: 24px;
     height: 40px;
   }
   
