--- a/e-commerce php poo/templates/style.css
+++ b/e-commerce php poo/templates/style.css
@@ -551,8 +551,8 @@ label{
   
   .cardAdmin {
     margin: 30px auto;
-    width: 300px;
-    height: 300px;
+    width: 260px;
+    height: 260px;
     border-radius: 40px;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
     cursor: pointer;
@@ -600,6 +600,15 @@ label{
       /* On small screens, we are no longer using row direction but column */
       flex-direction: column;
     }
+}
+
+
+.row.cell {
+    font-family: 'Poppins-Regular';
+    font-size: 18px;
+    color: #555;
+    line-height: 1.2;
+    font-weight: unset!important
 }
   
 
